# android_world

./: .env.example  .gitignore  Dockerfile  E:\Desktop\android_world\tmp\ui_log.txt  Gemfile  README.md  TRAJECTORY_VIEWER_README.md  _config.yml  abstract.md  debug_ui.html  index.markdown  minimal_task_runner.py  pyproject.toml  random_minimal_runner.py  requirements.txt  run.py  run_benchmark.sh  run_episode.py  serve_debug_ui.py  setup.py  setup_android_emulator.py  task_list.html  trajectory_viewer.py  trajectory_viewer_requirements.txt
.github/workflows/: pytest.yml  pytest_and_autopublish.yml
_data/: task_metadata.json
_includes/: head.html
_layouts/: home.html
_posts/: 2024-05-15-welcome-to-jekyll.markdown
_sass/minima/: _layout.scss
android_world/: __init__.py  checkpointer.py  checkpointer_test.py  constants.py  episode_runner.py  episode_runner_test.py  registry.py  suite_utils.py  suite_utils_test.py  task_metadata.json
android_world/agents/: __init__.py  adb_broadcast_agent.py  agent_utils.py  autodev_agent.py  base_agent.py  human_agent.py  infer.py  infer_test.py  json_test.py  m3a.py  m3a_test.py  m3a_utils.py  random_agent.py  random_agent_test.py  seeact.py  seeact_test.py  seeact_utils.py  seeact_utils_test.py  t3a.py  t3a_test.py
android_world/docker_setup/: start_emu_headless.sh
android_world/env/: __init__.py  actuation.py  tools.py  (+16 more)
docker_setup/: entrypoint.sh  start_appium.sh  start_emu_headless.sh  start_vnc.sh
reference/: adb_event_tool.py
scripts/: run_suite_on_docker.py
server/: android_env_server.py  android_server.py
(+146 files in other folders)
